[package]
authors = [ "Dan Sully <dan+github@sully.org>" ]
build = "build.rs"
categories = [
  "command-line-utilities",
  "config",
  "os::macos-apis",
]
description = "Defaults setting for macOS"
edition = "2024"
homepage = "https://github.com/dsully/macos-defaults"
keywords = [ "macos", "user", "defaults", "declarative", "yaml" ]
license = "MIT"
name = "macos-defaults"
readme = "README.md"
repository = "https://github.com/dsully/macos-defaults"
version = "0.2.0"

[dependencies]
camino = "1.2.1"
clap = { version = "~4.5.48", features = [
  "cargo",
  "color",
  "derive",
  "suggestions",
  "wrap_help",
] }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.5.58"
color-eyre = "0.6.5"
colored = "3.0.0"
dirs = "6.0.0"
duct = "0.13.7"
env_logger = "0.11.8"
hex = "0.4.3"
itertools = "0.14.0"
log = "0.4.28"
plist = "1.8.0"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_yaml = "0.9.34"
shadow-rs = { version = "0.38.1", default-features = false }
sysinfo = "0.33.1"
thiserror = "2.0.17"
yaml-rust = "0.4.5"
yaml-split = "0.4.0"

[dev-dependencies]
testresult = "0.4.1"

[build-dependencies]
shadow-rs = { version = "0.38.1", default-features = false }

[lints.clippy]
pedantic = "deny"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = [ "homebrew" ]
# A GitHub repo to push Homebrew formulas to
tap = "dsully/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [ "aarch64-apple-darwin" ]
# Publish jobs to run in CI
publish-jobs = [ "homebrew" ]
# Which actions to run on pull requests
pr-run-mode = "plan"

  # Use Apple Silicon runners.
  [workspace.metadata.dist.github-custom-runners]
  aarch64-apple-darwin = "macos-14"

# The profile that 'cargo dist' will build with
[profile.dist]
codegen-units = 1
debug = false
incremental = false
inherits = "release"
lto = true
opt-level = 3
panic = "abort"
strip = "none"

[profile.dev]
debug = 0

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
